Fix domain pages having wrong margins/padding

--- a/src/scss/domain.scss
+++ b/src/scss/domain.scss
@@ -1,5 +1,9 @@
 @use 'sass:math';
 
+.domain__tabs {
+  overflow: auto;
+}
+
 .domain__subdomain-list {
   display: flex;
   flex-wrap: wrap;
